# RecipeFinder

./: .gitignore  README.md
client/: .prettierrc  README.md  angular.json  package-lock.json  package.json  tsconfig.json
client/src/: index.html  styles.scss
client/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts
client/src/app/models/enums/: auth-role-classification.enum.ts
client/src/app/models/requests/: login-request.ts  new-category.ts  update-category.ts
client/src/app/models/responses/: get-authorization.ts  get-category.ts  get-me.ts  get-user.ts
client/src/app/modules/account-details/: account-details-routing.module.ts  account-details.module.ts
client/src/app/modules/category/: category-routing.module.ts  category.module.ts
client/src/app/modules/navigation/: navigation.component.html  navigation.component.scss  navigation.component.ts  navigation.module.ts
client/src/app/modules/recipe/: recipe-routing.module.ts  recipe.module.ts
client/src/app/services/: category.service.ts  user.service.ts
client/src/app/util/: utilities.ts
client/src/assets/themes/: dark-theme.css
client/src/environments/: environment.prod.ts  environment.ts
database/: recipe_finder.sql
server/: .gitignore  Cargo.toml  build.rs  default.json  sample_requests.http
server/src/: main.rs
server/src/api/: authorization_controller.rs  category_controller.rs  mod.rs  recipe_controller.rs  users_controller.rs
server/src/api/controllers/: authorization_controller.rs  category_controller.rs  recipe_controller.rs  users_controller.rs
server/src/api/guards/: authorization_guard.rs  mod.rs
server/src/api/middleware/: authorization_middlware.rs  mod.rs
server/src/api/models/request/: mod.rs
server/src/api/models/request/category/: mod.rs  new_category.rs  update_category.rs
server/src/api/models/request/recipe/: mod.rs  new_recipe.rs  search_recipe.rs  update_recipe.rs
server/src/api/models/request/users/: mod.rs  update_details.rs
server/src/api/models/response/: get_authorization.rs  get_category.rs  get_users.rs  mod.rs  search_recipe.rs
server/src/api/models/response/data_contracts/: category.rs
server/src/data/: mod.rs
server/src/data/category/: category.rs  mod.rs  sub_category.rs
server/src/data/common/: data_context.rs  data_element.rs  data_tools.rs
server/src/data/date_time/: simple_date.rs  simple_date_time.rs  simple_offset_date_time.rs  simple_time.rs
server/src/data/recipe/: mod.rs  recipe.rs
server/src/data/user/: application_role.rs  mod.rs
server/src/models/: authorization_roles.rs  mod.rs
server/src/models/config/: app_config.rs
server/src/models/data/: application_role.rs  category.rs  mod.rs  sub_category.rs  users.rs
server/src/models/request/users/: mod.rs
server/src/models/response/: current_user.rs  get_category.rs  get_users.rs  mod.rs
server/src/models/response/data_contracts/: category.rs
server/src/util/: auth_services.rs  string_services.rs
(+19 files in other folders)
