[package]
name = "recipe-finder-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
actix-rt = "2.7.0"
actix-identity = "0.5.1"
actix-session = {version ="0.7.0", features = ["cookie-session"] }
actix-web = {version="4.1.0", features = ["secure-cookies", "rustls"] }
actix-cors = "0.6.1"
async-std = {version = "1.12.0", features = ["attributes", "tokio1"] }
async-trait = "0.1.56"
derive_more = "0.99.17"
bb8 = "0.8.0"
tiberius = { version = "0.10.0", features = ["rust_decimal", "sql-browser-async-std", "async-std", "time"] }
# When not using Tokio for async processing, make sure to turn off all default features
# This way we can specify that we are using async-std crate instead.
bb8-tiberius = {version = "0.12.0", default-features = false, features = ["tds73", "sql-browser", "with-async-std"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.21"
lazy_static = "1.4.0"
r2d2 = "0.8.10"
rust-argon2 = "1.0.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.82"
sparkpost = "0.5.4"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
unicode-segmentation = "1.9.0"
time = {version = "0.3.11", features = ["parsing", "formatting", "serde"]}
config = { version = "0.13.1", features = [ "json" ]}
rustls = "0.20.6"
rustls-pemfile = "1.0.1"